Feat(#6) def initial endpoints (#24)
* feat(#6): add volunteer form handler

* feat(#6): update the api documentation

* feat(#6): complete volunteer form repository

* feat(#6): remove the volunteers_building_id foreign key
